@@ -20,7 +20,7 @@ For questions please check out http://pylib.org/contact.html
 from initpkg import initpkg
 trunk = None
 
-version = trunk or "1.0.0"
+version = trunk or "1.0.1"
 
 initpkg(__name__,
     description = "py.test and pylib: advanced testing tool and networking lib", 
