@@ -31,7 +31,7 @@ def main():
         name='py',
         description='py.test and pylib: advanced testing tool and networking lib',
         long_description = long_description, 
-        version= trunk or '1.0.0', 
+        version= trunk or '1.0.1', 
         url='http://pylib.org', 
         license='MIT license',
         platforms=['unix', 'linux', 'osx', 'cygwin', 'win32'], 
